# polystock-rs

./: .env  Cargo.toml  README.md  cli.yaml  tags
.github/workflows/: rust.yml
src/: lib.rs  main.rs  ticker_info.rs
tests/: ticker.rs
