[package]
name = "polystock-rs"
version = "0.1.0"
authors = ["rhinocerose <ashar.k.latif@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yahoo-finance = "0.3.0"
futures = "0.3"
futures-util = "0.3"
tokio = "0.2"
chrono = { version = "0.4", features = ["serde"] }
assert_approx_eq = "1.1.0"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
tempfile = "3"
