[package]
name = "polystock-rs"
version = "0.1.0"
authors = ["rhinocerose <ashar.k.latif@gmail.com>"]
edition = "2018"

[dependencies]
yahoo-finance = "0.3.0"
futures = "0.3"
futures-util = "0.3"
# tokio = "0.2"
tokio = "1.8.0"
chrono = "0.4"
assert_approx_eq = "1.1.0"
thiserror = "1.0"
structopt = "0.3"
dotenv = "0.15.0"
finnhub-rs = "0.1.2"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
